# pico-inverter

./: .gitignore  CMakeLists.txt  README.md  main.c  main.txt  off1.pio  off2.pio  ph0.pio  ph1.pio  ph2.pio  sigint.pio  spe1.pio  spe2.pio  ui.pio
lcd/: Pico_code.7z
lcd/Pico_code/Pico_code/c/: CMakeLists.txt
lcd/Pico_code/Pico_code/c/lib/Config/: DEV_Config.c
lib/Config/: DEV_Config.c
src/: pico_servo.c
